src/parser/snapshots/expr/assignment/assignment_simple.snap
---
source: src/parser/parser.rs
description: assignment expression with correct precedence
expression: actual.unwrap()
info: a = 1
---
location:
  line: 1
  column: 1
kind:
  assignment:
    lvalue:
      location:
        line: 1
        column: 1
      kind:
        variable:
          name: a
          location:
            line: 1
            column: 1
          original_name: ~
    rvalue:
      location:
        line: 1
        column: 5
      kind:
        int_constant:
          - "1"
          - decimal
    op: ~
