src/parser/snapshots/expr/assignment/compound_assign_left_shift.snap
---
source: src/parser/parser.rs
description: assignment expression with correct precedence
expression: actual.unwrap()
info: a <<= 2
---
location:
  line: 1
  column: 1
kind:
  assignment:
    lvalue:
      location:
        line: 1
        column: 1
      kind:
        variable: a
    rvalue:
      location:
        line: 1
        column: 7
      kind:
        int_constant:
          - "2"
          - decimal
    op: left_shift
